src/test/ui/custom-attribute-multisegment.stderr
error[E0433]: failed to resolve: could not find `nonexistent` in `existent`
  --> $DIR/custom-attribute-multisegment.rs:5:13
   |
LL | #[existent::nonexistent]
   |             ^^^^^^^^^^^ could not find `nonexistent` in `existent`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
